[gd_scene load_steps=2 format=3 uid="uid://decoration_item"]

[ext_resource type="Script" path="res://scripts/ui/decoration_item.gd" id="1_deco_item"]

[node name="DecorationItem" type="PanelContainer"]
custom_minimum_size = Vector2(120, 140)
script = ExtResource("1_deco_item")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ImageContainer" type="CenterContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Image" type="TextureRect" parent="VBoxContainer/ImageContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "装饰名称"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="PriceLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
theme_override_colors/font_color = Color(0.9, 0.8, 0.3, 1)
text = "100 金币"
horizontal_alignment = 1

[node name="OwnedBadge" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_bottom = 20.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 10
theme_override_colors/font_color = Color(0.3, 0.8, 0.3, 1)
text = "x0"
horizontal_alignment = 2
